# Vibe-Printer

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  STATUS.md  VIBE-PRINT-MASTER-PLAN.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  access.py  admin.py  assets.py  audit.py  auth.py  context.py  db.py  defaults.py  defaults.yaml  deps.py  discovery.py  errors.py  fleet.py  ipp_client.py  main.py  models.py  notify.py  obs.py  openapi_dump.py  overlay.py  pools.py  queue.py  registry.py  remote.py  render.py  seed.py  settings.py  templating.py  tunnel.py
app/api/: __init__.py  jobs.py  print.py  printers.py
app/backends/: __init__.py  base.py  cups.py  escpos_network.py  escpos_usb.py  (+6 more)
config/: printers.example.yaml  stripe-receipts.yaml
deploy/: .env.example  Caddyfile  backup.sh  cupsd.conf  docker-compose.yml  entrypoint.sh  install-native.sh  restore.sh  update-native.sh  upgrade.sh
examples/: client.py  client.ts  stripe_to_vibe.py
tests/: conftest.py  test_access.py  test_audit_chain.py  test_auth.py  test_backup.py  test_cashdrawer.py  test_compliance.py  test_defaults.py  test_delivery.py  test_discovery.py  test_encryption_cups.py  test_fleet.py  test_ipp.py  test_label_backends.py  test_overlay.py  test_pools.py  test_print_file.py  test_print_flow.py  test_provision.py  test_qa_edge.py  test_qr.py  test_registry.py  test_remote.py  test_render_escpos.py  test_scheduling.py  test_soak.py  test_templating.py  test_test_print.py  test_tunnel.py
web/: index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+22 files in other folders)
