[project]
name = "vibe-print"
version = "0.1.0"
description = "LAN print routing gateway — ESC/POS thermal + CUPS/IPP office printers behind one HTTP API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-escpos>=3.0",
    "qrcode>=7.4",
    "pillow>=10.2",
    "pypdf>=4.0",
    "reportlab>=4.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Native-lib backends — installed in the appliance image, optional for local dev/test.
pdf = ["weasyprint>=61", "pypdfium2>=4.25"]  # pypdfium2 rasterizes PDF pages (e.g. PDF→ZPL raster)
cups = ["pycups>=2.0"]
usb = ["pyusb>=1.2"]
access = ["pyjwt[crypto]>=2.8"]
encrypt = ["sqlcipher3-binary>=0.5"]  # SQLCipher at rest (Linux wheels; not available on Windows)
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
